--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ right:50px;
 ul li a{
     display: inline-block;
     padding: 10px 20px;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 
 .web_btn li a{
-    background: #00aeff;
+    background: #0e4e91;
 }
 .web_btn li a:hover{color: black;}
 a{color:#fff;}
